src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_List_Last_Updated__c</fullName>
        <description>This contains the date/time of when this Campaign was last successfully populated by a Campaign List</description>
        <label>Campaign List Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_List_Mutex__c</fullName>
        <description>This field indicates whether a mutex/lock is placed on this Campaign object.  A time value in this field indicates that a lock is in place, and the time when the lock was placed.  A null value in this field indicates no lock is being held.  This field must be updated atomically to avoid concurrency issues.</description>
        <label>Campaign List Mutex</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_List_Update_Status__c</fullName>
        <description>This tracks the status of updating this Campaign from a campaign list</description>
        <label>Campaign List Update Status</label>
        <picklist>
            <picklistValues>
                <fullName>FAILURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUNNING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign List</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>